added team statistics
