# lib/models/teamModel.ts
@@ -22,3 +22,39 @@ export const TeamSchema = new Schema({
         ref: 'Player'
     }]
 });
+
+export interface Games {
+    saison: string,
+    team: string
+}
+
+export interface playerStat {
+    name: string,
+    preName: string,
+    games: number,
+    penalties: number,
+    penaltyGoals: number,
+    penaltyQuota: number,
+    yellowCard: number,
+    twoMinutes: number,
+    redCard: number,
+    blueCard: number,
+    goals: number,
+    goalsPerGame: number
+}
+
+export const GamesSchema = new Schema({
+    opponent: {
+        type: String
+    },
+    saison: {
+        type: String
+    },
+    team: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Team'
+    },
+    playerStatistics: [{
+        type: Object
+    }]
+});
